--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@sendgrid/mail": "^7.7.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^10.8.0",
     "framer-motion": "^12.3.1",
@@ -26,6 +29,7 @@
     "react-router-dom": "^6.22.2",
     "readline-sync": "^1.4.10",
     "sib-api-v3-sdk": "^8.5.0",
+    "tailwind-merge": "^3.0.1",
     "uuid": "^11.0.5",
     "zustand": "^4.5.2"
   },
